Fixing some line height spacing

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ a {
   color: #8f2440;
   font-weight: bold;
   font-size: 1.125rem;
-  line-height: 160%;
+  line-height: 165%;
 }
 
 a:hover {
@@ -40,6 +40,19 @@ p {
 }
 
 .fig1 {
+  font-size: 1.125rem;
   font-style: italic;
   text-align: center;
+  line-height: 160%;
+}
+
+.p1 {
+  font-size: 1.125rem;
+  font-weight: bold;
+  color: #222;
+}
+
+.p2 {
+  color: #222;
+  line-height: 160%;
 }
